Not Displaying GIFs but loaded into array

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script src = "main.js"></script>
     <script>
     
@@ -14,8 +17,8 @@
     <h1> Giphy API Search</h1>
     <div id="buttons"></div>
     <div class="search-bar">
-        <input type="text" name="query" id="user-search" />
-        <input id="submit" type="button" value="Submit" class="btn  btn-sm btn-success" />
+        <input type="text" id="searchdata">
+        <button id = "searchgifs" type = "submit" onclick="getData()">Submit</button>
     </div>
 </div>
 
