Now displays GIF need to apply Flexbox

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script src = "main.js"></script>
-    <script>
-    
-    </script>
 
 </head>
 <div class="title-search-bar">
@@ -23,7 +20,7 @@
 </div>
 
 </div>
-<div id="results"></div>
+<div class="results"></div>
 
 
 
