--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
 </head>
 <div class="title-search-bar">
-    <h1> Giphy API Search</h1>
+    <div class="topnav">
+        <h1> Giphy API Search</h1>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+    </div>
     <div id="buttons"></div>
     <div class="search-bar">
         <input type="text" id="searchdata">
